corrections alignenement coeur et flex des card avec padding

--- a/css/style.css
+++ b/css/style.css
@@ -543,6 +543,11 @@ button {
     column-gap: 40px;*/
 }
 
+@media all and (max-width: 768px) {
+  .restaurant_card {
+    width: 45%;
+  }
+}
 .restaurant_card {
   background-color: #ffffff;
   border-radius: 20px;
@@ -551,7 +556,7 @@ button {
   display: flex;
   flex-direction: column;
   position: relative;
-  /* width: 100%;*/
+  width: 100%;
 }
 .restaurant_card img {
   object-fit: cover;
@@ -567,6 +572,8 @@ button {
 
 .card_alafrancaise {
   color: #000000;
+  width: 45%;
+  padding: 10px;
 }
 .card_alafrancaise:hover {
   color: #7e7e7e;
@@ -583,8 +590,8 @@ button {
 }
 
 .restaurant_bottom {
+  align-items: center;
   display: flex;
-  margin-top: 20px;
   padding: 0 20px 0 20px;
   height: 80px;
 }
@@ -592,9 +599,8 @@ button {
 .restaurant_icone {
   align-items: center;
   font-size: 1.5rem;
-  position: absolute;
-  right: 1rem;
-  bottom: 3rem;
+  margin-left: auto;
+  margin-right: 15px;
 }
 
 /*
